logs/express.log
Listing '.'...
Listing './bin'...
Listing './express'...
Listing './express/framework'...
Listing './express/framework/libs'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/express'...
Listing './lib/python3.5/site-packages/express/framework'...
Listing './lib/python3.5/site-packages/express/framework/connections'...
Listing './lib/python3.5/site-packages/express/framework/globals'...
Listing './lib/python3.5/site-packages/express/framework/libs'...
Compiling './lib/python3.5/site-packages/express/framework/libs/mcpack.py'...
***   File "./lib/python3.5/site-packages/express/framework/libs/mcpack.py", line 43
    raise Error, "only support mcpack.mcpackv1 and mcpack.mcpackv2"
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/express/framework/models'...
Listing './lib/python3.5/site-packages/express/framework/tools'...
Listing './lib/python3.5/site-packages/express/framework/tools/configures'...
Listing './lib/python3.5/site-packages/express-1.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
